--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jest-cli": "^19.0.2",
     "jest-enzyme": "^2.1.2",
     "jsdom": "^9.11.0",
+    "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
