--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jest-enzyme": "^2.1.2",
     "jsdom": "^9.11.0",
     "prettier": "^1.9.1",
+    "prettier-eslint": "^8.2.5",
     "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
